--- a/styles/small.css
+++ b/styles/small.css
@@ -1,4 +1,130 @@
-.LogoandName {
-  display: grid;
-  grid-template-columns: 45px auto 44px;
+@media screen and (max-width: 768px) {
+    header {
+        background-color: white;
+    }
+
+    .LogoandName {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        padding: 10px 15px;
+        background-color: white;
+        border-bottom: 1px solid #ddd;
+    }
+
+    .LogoandName span {
+        flex-grow: 1;
+        margin-left: 10px;
+        font-size: 19px;
+        font-weight: bold;
+    }
+
+    .hamburger {
+        width: 50px;
+        height: 50px;
+        background-color: #d3d3d3;
+        border: none;
+        cursor: pointer;
+        position: relative;
+        font-size: 2rem;
+        font-weight: bold;
+    }
+
+    .hamburger::before {
+        content: '☰';
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+    }
+
+    .hamburger.open::before {
+        content: '✕';
+    }
+
+    
+    .nav {
+        display: none;
+        flex-direction: column;
+    }
+
+    .nav.open {
+        display: flex;
+    }
+
+    .nav a {
+        display: block;
+        padding: 20px 15px;
+        background-color:black;
+        color: white;
+        text-decoration: none;
+        border-bottom: 1px solid black;
+        font-size: 18px;
+    }
+
+    .nav a:hover {
+        background-color: lightblue;
+    }  
+
+    .main{
+        display: block;
+    }
+
+    h2{
+        background-color: black;
+        color: white;
+        text-align: center;
+        padding: 10px;
+        border-radius: 8px;
+    }
+
+    .sections img{
+        max-width: 350px;
+        border-radius: 8px;
+        height: auto;
+        margin-left: 90px;
+    }
+
+    .logos {
+        display: flex;
+        justify-content: center; 
+        align-items: center; 
+        gap: 10px;
+        margin-bottom: 5px;  
+    }
+
+    .dates{
+        background-color: black;
+        color: white;
+        text-align: center;
+    }
+
+     .courses {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 20px;
+    }
+
+    .coursetitle{
+        background-color: lightblue;
+        text-align: center;
+        padding: 10px;
+        border-radius: 8px;
+    }
+
+    .coursecard{
+       padding: 12px;
+       border-radius: 8px;
+       text-align: center;
+       margin: 10px;
+    }
+
+    .coursediv{
+        gap: 30px;
+        width: 90%;
+        margin: 15px;
+    }
+
+ 
+  
 }
