--- a/styles/small.css
+++ b/styles/small.css
@@ -82,7 +82,7 @@
         width: fit-content;
         border-radius: 8px;
         height: auto;
-        /*margin-left: 90px;*/
+        margin: 15px;
     }
 
     .logos {
