--- a/chamber/styles/directory.css
+++ b/chamber/styles/directory.css
@@ -98,6 +98,89 @@
     border-radius: 5px;
 }
 
+.hero {
+    position: relative; 
+    width: 100%;
+    height: 400px; 
+}
+
+.hero img {
+    width: 100%; 
+    height: 100%;
+    object-fit: cover; 
+}
+
+.last{
+        display: grid;
+        grid-template-columns: 30% auto 40%;
+        padding: 15px;
+        margin: 0%;
+}
+
+#forecast{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(50px, 1fr));
+    gap: 10px;
+    width: 100%;
+    padding-top: 10px;
+}
+
+.forecast-day {
+    border: 1px solid #ddd;
+    padding: 15px;
+    text-align: center;
+    background-color: #f9f9f9;
+    border-radius: 8px;
+}
+
+.forecast-day h3 {
+    margin-top: 0;
+    margin-bottom: 10px;
+    font-size: 1.2em;
+}
+
+.forecast-day img {
+    width: 50px;
+    height: 50px;
+    display: block;
+    margin: 0 auto 10px;
+}
+
+.forecast-day p {
+    margin: 5px 0;
+    font-size: 1em;
+}
+
+.todaytemp {
+    border: 1px solid #ddd;
+    padding: 15px;
+    text-align: center;
+    background-color: #f9f9f9;
+    border-radius: 8px;
+}
+
+h3{
+    text-align: center;
+}
+
+.spotlightContainer{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+    gap: 10px;
+    width: 100%;
+    padding-top: 10px;
+    margin-left: 8px;
+
+}
+
+.einfo img {
+    width: 300px;
+    height: 300px;
+    display: block;
+    margin: 0 auto 10px;
+    border-radius: 5px;
+}
+
 @media screen and (max-width: 768px) {
     
     .LogoandName {
