--- a/chamber/styles/directory.css
+++ b/chamber/styles/directory.css
@@ -252,7 +252,10 @@ h3{
         background-color: goldenrod;
     }  
 
-    main{
-        display: block;
+    main {
+    width: 100%;
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 20px;
     }
 }
