--- a/chamber/styles/directory.css
+++ b/chamber/styles/directory.css
@@ -181,6 +181,40 @@ h3{
     border-radius: 5px;
 }
 
+.fandM{
+    display: grid;
+    grid-template-columns: 70% 30%;
+    padding: 15px;
+    margin: 0%;
+}
+
+#mi-np, #mi-br, #mi-sl, #mi-au{
+    background-color: goldenrod;
+    color: black;
+    padding: 20px;
+    text-align: center;
+    font-size: 20px;
+    border-radius: 7px;
+    margin: 10px;
+}
+
+.form{
+    background-color: lightgray;
+    padding: 20px;
+    font-size: 20px;
+    border-radius: 5px;
+    margin-bottom: 0%; 
+}
+
+.form button{
+    background-color: goldenrod;
+    color: black;
+    padding: 15px;
+    border-radius: 7px;
+    font-size: 15px;
+    
+}
+
 @media screen and (max-width: 768px) {
     
     .LogoandName {
